# osgood

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.test  LICENSE  README.md  docker-compose-test.yml  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
osgood/: __init__.py  base.py
src/osgood/: base.py
tests/: test_base.py
