[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "osgood"
version = "1.2.0"
authors = [
  { name="charlesriver456", email="osgood.package@gmail.com" },
]
description = "A small collection of useful functions"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/charlesriver456/osgood"
"Bug Tracker" = "https://github.com/charlesriver456/osgood/issues"
